| Bug #6024 | Test "client_test" fails in 4.1.6-gamma build (1) | ||
|---|---|---|---|
| Submitted: | 11 Oct 2004 14:24 | Modified: | 15 Oct 2004 2:06 |
| Reporter: | Joerg Bruehe | ||
| Status: | Closed | ||
| Category: | Server: Compiling | Severity: | S1 (Critical) |
| Version: | 4.1.6-gamma | OS: | Other (IRIX64) |
| Assigned to: | Konstantin Osipov | Target Version: | |
[11 Oct 2004 14:24]
Joerg Bruehe
[11 Oct 2004 14:37]
Joerg Bruehe
Same symptom on "pegasos1(Linux)" - AFAIK PowerPC, big-endian, 32-bit.
[14 Oct 2004 1:19]
Konstantin Osipov
Something must be wrong with our platform-specific serialization marcoses (*korr). There are other big endian boxes where the test passes (sunfire*, powermac*, aix52). Am I correct?
[15 Oct 2004 1:09]
Konstantin Osipov
The fix for Bug#6025 doesn't help here.
[15 Oct 2004 2:06]
Konstantin Osipov
Fixed in 4.1.7: Subject: bk commit - 4.1 tree (konstantin:1.2103) BUG#6024 ChangeSet 1.2103 04/10/15 03:54:40 konstantin@mysql.com +2 -0 Fix for Bug#6024 "Test "client_test" fails in 4.1.6-gamma build (1)": let's not assume that char is signed (its signedness is not defined). The server was also affected by the wrong typedef. libmysql/libmysql.c 1.269 04/10/15 03:54:34 konstantin@mysql.com +4 -3 Fix for Bug#6024 "Test "client_test" fails in 4.1.6-gamma build (1)": let's not assume that char is signed (its signedness is not defined).
